k8s/example/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: aifriends-multichannel-chatbot
   namespace: demos-main
   labels:
      app: nginx
spec:
   serviceName: "aifriends-multichannel-chatbot"
   replicas: 1
   selector:
      matchLabels:
         app: aifriends-multichannel-chatbot
   template:
      metadata:
         labels:
            app: aifriends-multichannel-chatbot
      spec:
         containers:
         -  name: aifriends-multichannel-chatbot-sa-container
            image: io2060/2060-service-agent:v1.1.0
            imagePullPolicy: Always
            volumeMounts:
            - name: aifriends-multichannel-chatbot-sa-pv-main
              mountPath: /root/.afj
            ports:
            -  containerPort: 4000
            -  containerPort: 3001
         -  name: aifriends-multichannel-chatbot-backend-container
            image: io2060/aifriends-multichannel-chatbot:main
            imagePullPolicy: Always
            ports:
            -  containerPort: 2903
         -  name: postgres
            image: postgres:15.2
            imagePullPolicy: Always
            ports:
            -  containerPort: 5432
            volumeMounts:
            - name: aifriends-multichannel-chatbot-pg-pv-main
              mountPath: /var/lib/postgresql/data
   volumeClaimTemplates: 
   - metadata:
       name: aifriends-multichannel-chatbot-sa-pv-main
     spec:
#       storageClassName: csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: aifriends-multichannel-chatbot-pg-pv-main
     spec:
#       storageClassName: csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: aifriends-multichannel-chatbot-data-store-main
     spec:
#       storageClassName: csi-cinder-classic
       accessModes:
       - "ReadWriteOnce"
       resources:
         requests:
           storage: 1Gi
