k8s/example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aifriends-multichannel-chatbot-public
  namespace: demos-main
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mno-name.aifriends.vas.mobiera.io
        - q.mno-name.aifriends.vas.mobiera.io
      secretName: public.mno-name.aifriends.vas.mobiera.io-cert
  rules:
    - host: mno-name.aifriends.vas.mobiera.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: aifriends-multichannel-chatbot
                 port:
                   number: 3001
    - host: q.mno-name.aifriends.vas.mobiera.io
      http:
        paths:
          - path: /avatar.png
            pathType: Prefix
            backend:
              service:
                 name: aifriends-multichannel-chatbot
                 port:
                   number: 2903
